--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,7 @@
-<p>
-  Modify me in `app/views/homes/index.html.erb` or change the root directive in
-  `config/routes.rb`
-</p>
+<!-- javascript to create sweater -->
+
+
+<!-- Along the right side -->
+<!-- link to create swatches (view existing measurements if signed in)-->
+<!-- link to create measurements (view  existing measurements if signed in)-->
+<!-- link to create/view existing patterns, if signed in -->
