--- a/app/views/swatches/index.html.erb
+++ b/app/views/swatches/index.html.erb
@@ -1,32 +1,8 @@
-<h5 class="swatches">What Is Your Swatch?</h5>
-<%= form_for @new_swatch do |f| %>
-
-  <%= f.label :name, 'Swatch Name' %>
-  <%= f.text_field :name %>
-
-  <%= f.label :stitches_per_inch %>
-  <%= f.select(:stitches_per_inch, options_for_select([[3,3], [4,4], [5,5], [6,6], [7,7]])) %>
-
-  <%= f.label :needle_size %>
-  <%= f.select(:needle_size, options_for_select([['00', 1], ['0', 2], ['1', 3],
-   ['1.5', 4], ['2', 5], ['2.5', 6], ['3', 7], ['4', 8], ['5', 9], ['6', 10],
-   ['7', 11], ['8', 12], ['9', 13], ['10', 14], ['10.5', 15], ['11', 16],
-   ['13', 17], ['15', 18], ['17', 19], ['19', 20], ['35', 21], ['50', 22]])) %>
-
-
-  <%= f.submit 'Add Swatch' %>
-<% end %>
-
 <% @swatches.each do |swatch| %>
   <div>
     <li>Swatch Name: <%= swatch.name %></li>
     <li>Stitches Per Inch: <%= swatch.stitches_per_inch %></li>
     <li>Needle Size: <%= swatch.needle_size %></li>
+    <%= link_to "Delete", swatch_path(swatch), method: :delete %> <br>
   </div>
 <% end %>
-
-
-<% if user_signed_in? %>
-  <%= link_to "Measurements", measurements_path %>
-<% end %>
-<%= link_to "Home", sweaters_path %>
